<resources>
    <string name="app_name">Neighbourgoods App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="appName">NeighborGoods App</string>
    <string name="logoAllScreens">The Logo Of NeighborHoods</string>


    <string name="signIn">Sign In</string>
    <string name="loginEnterEmail">Enter Email-Address</string>

    <string name="loginEnterPassword">Enter Password</string>

    <string name="loginText">Log In</string>
    <string name="forgotPassword">Forgot Password?</string>

    <string name="orLoginMethod">Or</string>

    <string name="notMemberYet">Not A Member Yet?</string>
    <string name="signUpText">Sign Up</string>

    <string name="forgotPasswordToolbar">Forgot Password</string>

    <string name="forgotPasswordText">Enter Your Registered Email Address or Phone Number to reset your password. Password Reset Link Will Be Sent to You.</string>

    <string name="sendResetLink">Send Reset Link</string>

    <string name="signUpEnterPhoneNumber">Enter Phone Number</string>

    <string name="signUpConfirmPassword">Confirm Password!</string>

    <string name="termsAndPrivacyPolicy">Terms &amp; Privacy Policy</string>
    <string name="signUpAgreement">By signing up, I agree with </string>

    <string name="alreadyMember">Already a member,</string>
    <string name="signInText">SignIn</string>

    <string name="iAmVendor">I am a vendor</string>

    <string name="basicProfile">Basic Detail</string>

    <string name="profileEnterName">Enter Name</string>

    <string name="profileAddress">Enter Address</string>

    <string name="profileCity">Enter Your City</string>g>

    <string name="profileState">Enter Your State</string>

    <string name="profile">Profile</string>

    <string name="profileCountry">Enter Your Country</string>

    <string name="profilePicture">Profile Picture</string>

    <string name="uploadProfilePicture">Upload A Profile Picture</string>

    <string name="select">Select</string>
    <string name="remove">Remove</string>

    <string name="proceed">Proceed</string>
    <string name="verify">Verify</string>

    <string name="enterOtpHeading">Enter OTP(One Time Password) sent to your registered email address and phone.</string>

    <string name="notReceivedOtp">No Otp Yet?</string>
    <string name="resend">Resend</string>

    <string name="notificationIcon">Notification Icon</string>
    <string name="homeLogo">Home Screen Logo</string>

    <string name="locationLogo">Location Logo</string>

    <string name="locationDummy">Helsinki, Finland</string>

    <string name="topCategories">Top Categories</string>

    <string name="categoryImage">Category Image</string>

    <string name="nearbyStores">Nearby Stores</string>

    <string name="viewAll">View All</string>

    <string name="viewOnMap">View On Map</string>

    <string name="popularItems">Popular Items</string>

    <string name="popularItemPicture">Popular item Picture</string>

    <string name="navMenuHome">Home</string>
    <string name="navMenuCart">Cart</string>

    <string name="shopMenu">Menu</string>

    <string name="sortByFilter">Sort By</string>

    <string name="sortMostPopular">Most Popular</string>
    <string name="sortNearby">Near By</string>
    <string name="priceSort">Price Low To High</string>

    <string name="filterType">Type</string>
    <string name="filterOther">Other</string>
    <string name="filterDelivery">Delivery</string>
    <string name="filterPickUp">Pickup</string>

    <string name="applyFilter">Apply</string>

    <string name="applyCoupon">Apply Coupon Code</string>

    <string name="itemTotal">Item Total</string>
    <string name="restaurantCharges">Restaurant Charges</string>
    <string name="deliveryFee">Delivery Fee</string>
    <string name="offer">Offer</string>

    <string name="toPay">To Pay</string>

    <string name="checkout">Proceed To Checkout</string>

    <string name="myOrders">My Orders</string>
    <string name="manageAddresses">Manage Addresses</string>
    <string name="payments">Payments</string>
    <string name="favourites">Favorites</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>


    <string name="defaultWord">Default</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="addNew">Add New</string>

    <string name="saveChanges">Save Changes</string>

    <string name="orderStatus">Status:</string>

    <string name="viewDetails">View Details</string>

    <string name="notifications">Notifications</string>

    <string name="turnOffPushNotifications">Turn Off Push Notifications</string>
    <string name="turnOffEmailNotifications">Turn Off Email Notifications</string>

    <string name="changePassword">Change Password</string>

    <string name="enterCurrentPassword">Enter Current Password</string>

    <string name="enterNewPassword">Enter New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>

    <string name="editProfile">Edit Profile</string>

    <string name="inStock">In Stock</string>

    <string name="variants">Variants</string>

    <string name="delivery">Delivery</string>
    <string name="takeAway">Take Away</string>
    <string name="forgotPasswordHeading">Forgot Password</string>

    <string name="address">Address</string>
    <string name="addAddress">Add Address</string>
    <string name="editAddress">Edit Address</string>

    <string name="authenticationDisclaimer">If Either of Email Or Phone Changes, you have to ReVerify.</string>

    <string name="filter">Filter</string>
    <string name="none">None</string>
    <string name="all">All</string>

    <string name="noOfResults">%s Results</string>
    <string name="Stores">Stores</string>

    <string name="storeDetail">Store Detail</string>

    <string name="deliveryRange">Delivery Range</string>
    <string name="minOrderFreeDelivery">Minimum Order For Free Delivery</string>
    <string name="minOrderAmount">Minimum Order Amount</string>

    <string name="standardDeliveryCharges">Standard Delivery Charges</string>

    <string name="deliveryService">Delivery Service</string>
    <string name="pickupService">Pickup Service</string>

    <string name="categories">Categories</string>
    <string name="totalOrders">Total Orders</string>
    <string name="totalProducts">Total Products</string>
    <string name="totalEarnings">Total Earnings</string>

    <string name="offering">Offering</string>

    <string name="paymentOptions">Payment Options</string>

    <string name="creditDebit">Credit/Debit Cards</string>

    <string name="proceedToPay">Proceed To Pay</string>


    <string name="addNewCard">Add New Card</string>

    <string name="enterCardNumber">Enter Card Number</string>

    <string name="enterCardExpiry">Expiry in MMYY Format</string>

    <string name="cvv">CVV</string>

    <string name="nameOnCard">Name On Card</string>

    <string name="cardNumber">XXXX XXXX XXXX %s</string>

    <string name="paymentSuccessful">Payment Successful And Order Placed. You can check the Status Of Orders in Manage Orders Section.</string>
    <string name="selectAddress">Select Address</string>

    <string name="euroAmount">%s €</string>

</resources>