<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="50dp">

            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/logoAllScreens"
                android:src="@drawable/logo_all_screens"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/logInText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/loginText"
                android:textAlignment="center"
                android:textColor="@color/logoScreen"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginLogo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEnterEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/loginEnterEmailHeading"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintLeft_toLeftOf="@id/logInText"
                app:layout_constraintRight_toRightOf="@id/logInText"
                app:layout_constraintTop_toBottomOf="@id/logInText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEnterEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginEnterEmail"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEnterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/loginEnterPasswordHeading"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintLeft_toLeftOf="@id/loginEnterEmail"
                app:layout_constraintRight_toRightOf="@id/loginEnterEmail"
                app:layout_constraintTop_toBottomOf="@id/loginEnterEmail"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEnterPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginEnterPassword"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/forgotPassword"
                android:textColor="@color/loginForgotPassword"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="@id/loginEnterPassword"
                app:layout_constraintRight_toRightOf="@id/loginEnterPassword"
                app:layout_constraintTop_toBottomOf="@id/loginEnterPassword" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/logoScreen"
                android:text="@string/loginText"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/loginEnterPassword"
                app:layout_constraintRight_toRightOf="@id/loginEnterPassword"
                app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

            <TextView
                android:id="@+id/orLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/orLoginMethod"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="@id/loginButton"
                app:layout_constraintRight_toRightOf="@id/loginButton"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />

            <Button
                android:id="@+id/googleLogIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:text="Google"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/facebookLogin"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@id/loginButton"
                app:layout_constraintTop_toBottomOf="@id/orLogin" />

            <Button
                android:id="@+id/facebookLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/facebookButtonColor"
                android:text="Facebook"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:icon="@drawable/facebook_logo"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:layout_constraintEnd_toEndOf="@id/loginButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/googleLogIn"
                app:layout_constraintTop_toTopOf="@id/googleLogIn" />

            <TextView
                android:id="@+id/notAMember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/notMemberYet"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/signUpText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1.5"
                app:layout_constraintStart_toStartOf="@id/googleLogIn"
                app:layout_constraintTop_toBottomOf="@id/googleLogIn"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/signUpText"
                android:textColor="@color/signUpTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/facebookLogin"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/notAMember"
                app:layout_constraintTop_toTopOf="@id/notAMember" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>