<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/chooseAddressType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/chooseDefaultCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chooseDefaultCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/defaultWord"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/chooseAddressType"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/chooseAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/chooseDefaultCheckBox"
        app:layout_constraintStart_toStartOf="@id/chooseAddressType"
        app:layout_constraintTop_toBottomOf="@id/chooseAddressType" />

    <Button
        android:id="@+id/chooseEditAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/edit"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/selectAddress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseAddress"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/selectAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/select"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chooseEditAddress"
        app:layout_constraintTop_toBottomOf="@id/chooseAddress" />

    <View
        android:id="@+id/chooseAddressDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@id/selectAddress"
        app:layout_constraintStart_toStartOf="@id/chooseEditAddress"
        app:layout_constraintTop_toBottomOf="@id/chooseEditAddress" />
</androidx.constraintlayout.widget.ConstraintLayout>